# t0-1

./: .env.default  .env.example  .env.rag_example  .gitignore  .gitmodules  .pre-commit-config.yaml  PLAN.md  README.md  index.html  pyproject.toml  requirements.txt  serve_t0.md
assets/: index-28IuaoVU.css  index-6K4lkDbu.js  index-B2ye_G9Y.css  index-B4ApHWkP.js  index-B4DAFpOS.js  index-BJTlu7SI.js  index-BNJErYs5.js  index-BQxUSeiG.js  index-BQyPH6QO.js  index-Bdgj8imM.js  index-BgsYj8Bp.js  index-C5Rw_Vtt.js  index-C8Of07Di.css  index-C8UgOihz.js  index-CA1ytOX_.css  index-CAmcHKQi.js  index-CKcxvqb7.js  index-CZb8oxWE.js  index-CaLHTlG_.js  index-Cfrw8RXe.js  index-CiiEricF.css  index-CsTAdP6R.css  index-CwQ1Xxsj.css  index-CwtNNB6Y.js  index-CyR8FoUA.css  index-D0JNxZks.js  index-DFXH8Smr.js  index-DGNvprcw.js  index-DGZ5mDdX.js  index-DI5AEz6n.js  index-DeI_pV7p.js  index-Derwsqvq.js  index-Dzl_kR6w.js  index-KN_LTNdq.js  index-MLTLxoSY.js  index-NFn2K3LX.js  index-ObC7ttGH.js  index-oPW0of-V.js
deployment/: README.md  cloud_init_users.yaml  delete_controller_vm.sh  delete_gpu_resource_group.sh  playbook_create_controler.yaml  playbook_create_gpu_host.yaml  playbook_create_static_resources.yaml  playbook_deploy_t0.yaml  playbook_get_data.yaml  provision_controller_vm.sh  provision_three_vm.sh  requirements.yml  tasks_mount_file_share.yaml  tasks_setup_huggingface.yaml  vars_common.yaml
docker/: Dockerfile
docs/: query-flow-simulation.md  training_data_pipeline.md  vm-frontend-deployment.md
experiments/001/: README.md  pyproject.toml  walkthrough.ipynb
experiments/001/notebooks/: query_vector_store.ipynb  walkthrough.ipynb
experiments/001/src/: demo.ipynb  generate_jsonl_snyth_requests.py  overly_simple_s1.py  test_results.ipynb
experiments/001/src/finetuning/: README.md
experiments/001/templates/: synthetic_data.txt
experiments/t0-001/: .env.rag_example  README.md  pyproject.toml
experiments/t0-001/data/synthetic_queries/: gemma3:1b_10_synthetic_queries.jsonl
experiments/t0-001/data/synthetic_requests/: gemma3:1b_10_synthetic_requests.jsonl
experiments/t0-001/notebooks/: generate_summaries.ipynb  query_rag.ipynb  query_vector_store.ipynb  reasoning_step.ipynb  rerank_using_gpt4.ipynb  walkthrough.ipynb
experiments/t0-001/results/: 1_a2c7df4.md  2b_580a395.md  2b_granular.csv  2b_granular.ipynb  2b_granular.md  2b_granular_580a395.csv  2b_granular_580a395.md  2b_results.csv  2b_severity.ipynb  2b_severity_evaluation.csv  2b_severity_evaluation_580a395.md  2b_severity_evalution.ipynb  8a09b3d.md  932988e.md  9990314.md
experiments/t0-001/scripts/: README.md  convert_html_conditions_to_dataset.py  convert_txt_conditions_to_dataset.py  deduplicate_2k_synthetic_data.py  evaluate_rag_14B_k10.sh  evaluate_rag_14B_k30.sh  evaluate_rag_7B_k30.sh  evaluate_rag_deepseek_r1_k5_summarised.sh  evaluate_rag_t0_14B.sh  evaluate_reasoner.py  parse_html.py  rag_chat_conversational.sh  rag_chat_gpt-4o.sh  s1k.py  serve-t0-no-tools.sh  serve-t0-with-tools.sh  serve_qwen_with_tools.sh  serve_rag.sh  serve_rag_conversational.sh  serve_rag_conversational_local.sh  serve_rag_conversational_testing.sh  serve_t0.sh  test_Azure_models.py  tokenize_s1k.py
experiments/t0-001/scripts/v4_summarised/k30/: evaluate_rag_deepseek_r1_k30_summarised.sh  evaluate_rag_gpt4o_k30_summarised.sh  evaluate_rag_o3_mini_k30_summarised.sh  evaluate_rag_s1_thinking_1024_k30_summarised.sh  evaluate_rag_t0_k5C_32B_thinking_256_k30_summarised.sh  evaluate_rag_t0_k5_32B_thinking_1024_k30_summarised.sh  evaluate_rag_t0_k5_32B_thinking_2048_k30_summarised.sh  evaluate_rag_t0_k5_32B_thinking_256_k30_summarised.sh  evaluate_rag_t0_k5_32B_thinking_512_k30_summarised.sh
experiments/t0-001/scripts/v4_summarised/k5/: evaluate_rag_deepseek_r1_k5_summarised.sh  evaluate_rag_o3_mini_k5_summarised.sh  evaluate_rag_qwen_32B_k5_summarised.sh  evaluate_rag_s1_thinking_1024_k5_summarised.sh  evaluate_rag_t0_k5C_32B_thinking_256_k5_summarised.sh  evaluate_rag_t0_k5_32B_thinking_0_k5_summarised.sh  evaluate_rag_t0_k5_32B_thinking_1024_k5_summarised.sh  evaluate_rag_t0_k5_32B_thinking_2048_k5_summarised.sh  evaluate_rag_t0_k5_32B_thinking_256_k5_summarised.sh  evaluate_rag_t0_k5_32B_thinking_512_k5_summarised.sh
experiments/t0-001/scripts/v4_summarised/no_rag/: evaluate_qwen_32B_summarised.sh
experiments/t0-001/src/t0_001/: cli.py  defaults.py  generate_jsonl_snyth_requests.py  utils.py
experiments/t0-001/src/t0_001/llm/: client.py  reasoner.py
experiments/t0-001/src/t0_001/query_vector_store/: build_index.py  build_retriever.py  custom_parent_document_retriever.py  endpoint.py  evaluate.py  index_endpoint.py  retriever_endpoint.py  utils.py
experiments/t0-001/src/t0_001/rag/: build_rag.py  chat_interact.py  chat_model.py  custom_prompt_template.py  endpoint.py  evaluate.py  rag_endpoint.py  utils.py
experiments/t0-001/src/t0_001/synth_data_generation/: azure.py  generate_jsonl_snyth_queries.py  generate_jsonl_snyth_requests.py  ollama.py
experiments/t0-001/templates/: rag_evaluation_prompt.txt  rag_evaluation_prompt_deepseek_r1.txt  rag_evaluation_system_prompt.txt  rag_evaluation_system_prompt_deepseek_r1.txt  rag_prompt.txt  rag_prompt_conversational_v2.txt  rag_system_prompt.txt  rag_system_prompt_conversational.txt  rag_system_prompt_conversational_testing.txt  rag_system_prompt_conversational_v2.txt  reranking_prompt.txt  synthetic_data.txt  withoutrag_evaluation_prompt.txt  withoutrag_evaluation_system_prompt.txt
notebooks/: analyse_dataset_token_lengths.ipynb  answering_system_prompt.txt  check_n_retrieved.ipynb  ollama_t0.ipynb  query_rag.ipynb  reasoning_step.ipynb  reasoning_system_prompt.txt  reasoning_user_prompt.txt  rerank_using_gpt4.ipynb  rerank_using_gpt4_predict_with_o3.ipynb  test_react_pipeline.ipynb
planning/: clinician-input-2025-04-07.md  plan-2025-04-01.md  week1-2025-04-01.md
proxy/: Dockerfile  README.md  nginx.conf
results/: 2a_932988e.md  (+9 more)
(+216 files in other folders)
