[project]
name = "t0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "T0 Team", email = "x@turing.ac.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "beautifulsoup4>=4.13.3",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.3",
]
