[project]
name = "t0_1"
version = "0.1.0"
description = "t0.1: Initial demonstration for t0 project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "ipykernel>=6.29.5",
    "azure-ai-inference>=1.0.0b9",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
    "aiohttp>=3.11.15",
    "azureopenai>=0.0.1",
    "openai>=1.74.0",
    "gitpython>=3.1.44",
    "pandas>=2.2.3",
    "fastparquet>=2024.11.0",
    "huggingface-hub>=0.30.1",
    "datasets>=3.5.0",
    "transformers>=4.51.3",
    "jinja2>=3.1.6",
    "sentence-transformers>=4.1.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.6.3",
    "ollama>=0.4.7",
    "typer>=0.15.2",
    "fastapi>=0.115.12",
    "faiss-cpu>=1.10.0",
    "torch>=2.6.0",
    "tiktoken>=0.9.0",
    "langchain==0.3.23",
    "langchain-azure-ai==0.1.2",
    "langchain-chroma==0.2.2",
    "langchain-community==0.3.21",
    "langchain-core==0.3.65",
    "langchain-huggingface==0.1.2",
    "langchain-openai==0.3.12",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.1",
    "langgraph-checkpoint==2.0.26",
    "langgraph-prebuilt==0.2.2",
    "langgraph-sdk==0.1.70",
    "langsmith==0.3.45",
]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "trl>=0.19.1,<0.20.0",
]
vllm = [
    "vllm>=0.8.3"
]

[project.scripts]
t0-1 = "t0_1.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
# -v: verbose output (show individual test names instead of dots)
# --tb=short: shorter tracebacks (just the assertion line + error)
addopts = "-v --tb=short"
