[project]
name = "t0-001"
version = "0.1.0"
description = "t0-001"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.50.3",
    "torch>=2.6.0",
    "langchain>=0.3.22",
    "langchain-huggingface>=0.1.2",
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "ollama>=0.4.7",
    "langchain-chroma>=0.2.2",
    "typer>=0.15.2",
    "fastapi>=0.115.12",
    "faiss-cpu>=1.10.0",
    "langchain-community>=0.3.20",
    "ipykernel>=6.29.5",
    "tiktoken>=0.9.0",
    "pre-commit>=4.2.0",
    "langgraph>=0.3.22",
]

[project.scripts]
t0-001 = "t0_001.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
